# trajantable

./: .bmv-post-commit.sh  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  DESIGN-universe.md  LICENSE  README.md  REFACTOR.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs_publish.yml  python-package.yml
changelog/: index.html
docs/: index.md
docs/guides/: annotations.md  cell-aliases.md  cheatsheet.md  connectivity-statistics.md  filtering.md  output.md  persistence.md  synapse-table.md
docs/reference/: api.md
docs/stylesheets/: extra.css
guides/annotations/: index.html
guides/cell-aliases/: index.html
guides/cheatsheet/: index.html
guides/filtering/: index.html
guides/output/: index.html
guides/persistence/: index.html
guides/synapse-table/: index.html
memory/: MEMORY.md  reference_cave_split_positions.md
reference/api/: index.html
scratch/: README.md  pyproject.toml
src/trajan/: __init__.py  _base.py  connectivity_table.py  edgelist.py  export.py  pair_universe.py  scope.py  spatial.py  stats.py  synapse_table.py
stylesheets/: extra.css
tests/: test_bootstrap.py  test_connectivity_table.py  test_edgelist.py  test_hardening.py  test_pair_universe.py  test_scope.py  test_spatial.py  test_stats_counts.py  test_synapse_table.py
