[project]
name = "trajan-scratch"
version = "0.0.0"
description = "Scratch workspace for trajan development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "trajan",
    "ipykernel",
]

[tool.uv.sources]
trajan = { path = "..", editable = true }

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select=["E9","F63","F7","F82"]

[tool.poe.tasks.profile-all]
cmd = "uv run scalene"
help = "Profile cpu and memory of task with scalene"

[tool.poe.tasks.profile]
cmd = "uv run pyinstrument -r html"
help = "Profile cpu of task with pyinstrument"

[tool.poe.tasks.scratch-lab]
cmd = "uv run --with jupyterlab --with jupyterlab-vim --with jupyterlab-code-formatter --with jupyter-resource-usage --with jupyterlab-execute-time --with catppuccin-jupyterlab --with ipywidgets jupyter lab --no-browser"
help = "Start Jupyter Lab"
